--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head>
 
   <body>
-    <h1>hello world...</h1>
+    <h1>hello world...</h1>\
+    <h2>Hello microverse</h2>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
