--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
   </head>
 
   <body>
-    <h1>hello world...</h1>\
-    <h2>Hello microverse</h2>
+    <header id="header">
+      <img  id="header-img" src="download.png" alt="Image">
+      <nav>
+
+      </nav>
+
+    </header>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
