--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   <body>
     <header id="header">
       <img  id="header-img" src="download.png" alt="Image">
-      <nav>
-
+      <nav id="nav-bar">
+        <a href="/html/" class="nav-link">HTML</a> |
+        <a href="/css/" class="nav-link">CSS</a> |
+        <a href="/js/" class="nav-link">JavaScript</a> |
+        <a href="/python/" class="nav-link">Python</a>
       </nav>
 
     </header>
