--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
       </nav>
 
     </header>
+    <video id="video" width="320" height="240" controls>
+      <source src="https://www.youtube.com/watch?v=rUWxSEwctFU&ab_channel=IanRushton" type="video/mp4">
+    </video>
+
+
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
