--- a/index.html
+++ b/index.html
@@ -10,16 +10,25 @@
     <header id="header">
       <img  id="header-img" src="download.png" alt="Image">
       <nav id="nav-bar">
-        <a href="/html/" class="nav-link">HTML</a> |
-        <a href="/css/" class="nav-link">CSS</a> |
-        <a href="/js/" class="nav-link">JavaScript</a> |
-        <a href="/python/" class="nav-link">Python</a>
+        <a href="#html" class="nav-link">HTML</a> |
+        <a href="#css" class="nav-link">CSS</a> |
+        <a href="#js" class="nav-link">JavaScript</a> |
+        <a href="#python" class="nav-link">Python</a>
       </nav>
 
     </header>
+    <dev id="html">
+
+    </dev>
     <video id="video" width="320" height="240" controls>
       <source src="https://www.youtube.com/watch?v=rUWxSEwctFU&ab_channel=IanRushton" type="video/mp4">
     </video>
+    <div id="css"></div>
+    <div id="js"></div>
+    <div id="python"></div>
+    
+
+    
 
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
