--- a/index.html
+++ b/index.html
@@ -9,23 +9,46 @@
   <body>
     <header id="header">
       <img  id="header-img" src="download.png" alt="Image">
+      <br><br><br>
       <nav id="nav-bar">
         <a href="#html" class="nav-link">HTML</a> |
         <a href="#css" class="nav-link">CSS</a> |
-        <a href="#js" class="nav-link">JavaScript</a> |
+        <a href="#JS" class="nav-link">JavaScript</a> |
         <a href="#python" class="nav-link">Python</a>
       </nav>
 
     </header>
+    <br><br><br>
     <dev id="html">
+      <form action="" id="form">
+        <p>HTML is a programming language that is widely used</p></form>
+        <p>to get courses about HTML put your email here</p>
+        <input type="text" id="email1">
 
     </dev>
-    <video id="video" width="320" height="240" controls>
+    <br><br><br>
+    <video id="video" width="500" height="500" controls>
       <source src="https://www.youtube.com/watch?v=rUWxSEwctFU&ab_channel=IanRushton" type="video/mp4">
     </video>
-    <div id="css"></div>
-    <div id="js"></div>
-    <div id="python"></div>
+    <br><br><br>
+   
+    <div id="css"><form action="" id="form">
+      <p>CSS is widely used to create style sheets with HTML</p>
+      <p>to get courses about CSS put your email here</p>
+        <input type="text" id="email2">
+    </form></div>
+    <br><br><br>
+    <div id="JS"><form action="" id="form">
+      <p>JS is another widely used programming language</p>
+      <p>to get courses about JS put your email here</p>
+        <input type="text" id="email3">
+    </form></div>
+    <br><br><br>
+    <div id="python"><form action="" id="form">
+      <p>Pyhton is a great language used in data science</p>
+      <p>to get courses about Python put your email here</p>
+        <input type="text" id="email4">
+    </form></div>
     
 
     
